# algorithms

./: .gitignore  CMakeLists.txt  README.md  main.cpp
doc/geometry/: line_segment.txt
doc/matrix/: Axb  lup.txt
doc/string_matching/: finite_automata.txt  kmp.txt
src/: util.h
src/deque/: ArrayDeque.cpp  ArrayDeque.hpp  array_deque.cpp  array_deque.h
src/graph/: AdjacencyList.cpp  AdjacencyList.hpp  AdjacencyMatrix.cpp  AdjacencyMatrix.hpp  adjacency_list.cpp  adjacency_list.h  adjacency_matrix.cpp  adjacency_matrix.h  adjv.cpp  adjv.h  adjv.hpp
src/hanoi/: Hanoi.cpp  Hanoi.hpp  hanoi.cpp  hanoi.h
src/list/: DoublyList.cpp  DoublyList.hpp  OnePtrDoublyList.cpp  OnePtrDoublyList.hpp  SinglyList.cpp  SinglyList.hpp  doubly_list.cpp  doubly_list.h  one_ptr_doubly_list.cpp  one_ptr_doubly_list.h  singly_list.cpp  singly_list.h
src/math/: Math.cpp  Math.hpp  math.cpp  math.h
src/memory/: MultiMemory.cpp  MultiMemory.hpp  SingleMemory.cpp  SingleMemory.hpp  StackMemory.cpp  StackMemory.hpp  multi_memory.cpp  multi_memory.h  single_memory.cpp  single_memory.h  stack_memory.cpp  stack_memory.h
src/queue/: ArrayQueue.cpp  ArrayQueue.hpp  ListQueue.cpp  ListQueue.hpp  TwoStackQueue.cpp  TwoStackQueue.hpp  array_queue.cpp  array_queue.h  list_queue.cpp  list_queue.h  two_stack_queue.cpp  two_stack_queue.h
src/stack/: ArrayStack.hpp  ListStack.hpp  SmartListStack.hpp  Stackable.hpp  TwoQueueStack.cpp  TwoQueueStack.hpp  TwoStackArray.cpp  TwoStackArray.hpp  array_stack.h  list_stack.h  smart_list_stack.h  stackable.h  two_queue_stack.cpp  two_queue_stack.h  two_stack_array.cpp  two_stack_array.h
src/table/: BitVector.cpp  BitVector.hpp  DirectList.cpp  DirectList.hpp  HashTable.cpp  HashTable.hpp  bit_vector.cpp  bit_vector.h  direct_list.cpp  direct_list.h  hash_table.cpp  hash_table.h
src/tree/: BTree.cpp  BTree.hpp  BinaryTree.cpp  BinaryTree.hpp  RBTree.cpp  RBTree.hpp  SiblingTree.cpp  SiblingTree.hpp  b_tree.cpp  b_tree.h  binary_tree.cpp  binary_tree.h  rb_tree.cpp  rb_tree.h  sibling_tree.cpp  sibling_tree.h
test/: deque_tests.cpp  graph_tests.cpp  list_tests.cpp  math_tests.cpp  memory_tests.cpp  queue_tests.cpp  stack_tests.cpp  table_tests.cpp  tree_tests.cpp
